test/files/neg/macro-constructor-badret/Test_2.scala
import scala.language.experimental.macros

class C private () {
  def this(x: Int) = macro Macros.ctor
}